tests/ui/associated-types/point-at-type-on-obligation-failure.stderr
error[E0271]: type mismatch resolving `<Foo2 as Bar2>::Ok == ()`
  --> $DIR/point-at-type-on-obligation-failure.rs:14:20
   |
LL |     type Sibling = Foo2;
   |                    ^^^^ type mismatch resolving `<Foo2 as Bar2>::Ok == ()`
   |
note: expected this to be `()`
  --> $DIR/point-at-type-on-obligation-failure.rs:18:15
   |
LL |     type Ok = u32;
   |               ^^^
note: required by a bound in `Bar::Sibling`
  --> $DIR/point-at-type-on-obligation-failure.rs:3:24
   |
LL |     type Sibling: Bar2<Ok=Self::Ok>;
   |                        ^^^^^^^^^^^ required by this bound in `Bar::Sibling`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0271`.
